--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
       <h1>Transform Your Digital Presence</h1>
       <p>We provide innovative digital solutions to help businesses grow and thrive in the modern digital landscape.</p>
       <div class="hero-buttons">
-        <a href="contact.html" class="btn">Get Started</a>
+        <a href="https://sainismailabad.github.io/ibadtech/Contact.html" class="btn">Get Started</a>
         <a href="#services" class="btn btn-outline">Our Services</a>
       </div>
     </div>
