--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
             Our mission is to empower businesses with cutting-edge digital solutions that drive growth, 
             enhance visibility, and maximize return on investment.
           </p>
-          <a href="contact.html" class="btn">Get In Touch</a>
+          <a href="https://sainismailabad.github.io/ibadtech/Contact.html" class="btn">Get In Touch</a>
         </div>
         <div class="about-image-container">
           <img src="About us.jpg" alt="About Ibad Tech" class="about-image" />
