--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
     <div class="container">
       <h2>Our Services</h2>
       <div class="service-container">
-
+<a href="digital.html" target="_blank" style="text-decoration: none; color: inherit;">
         <div class="service-card card-3d">
           <img src="digital-marketing-image.png" alt="Digital Marketing" class="service-image" />
           <h3>Digital Marketing</h3>
